3. New Property: Prop_Socials -- for making socials contextually available (with items, in rooms, etc)
4. Generic Languages can now be created online and within the MUDGrinder.  See Builders Guide.
5. Generic Crafting Skills can now be created online and within the MUDGrinder. See Builders Guide.  
6. All-Qualifys list can now be modified from MUDGrinder and Command Line. See Builders Guide.
7. Channels definition in coffeemud.ini file can now include override color codes for each channel.
8. Numerous random bugs fixed, with special thanks to frugality200
# Build 5.7.4 Release 8/08/2011
1. New coffeemud.ini entries: MINSESSIONTHREADS, MAXSESSIONTHREADS for managing player I/O thread usage.
2. Converted Siplet Applet in the default web site to an ajax-based http macro.  Damn you browser security for killing my applet!
3. New Fighter skill: Subdue
4. New Command: DUEL -- for safe, healthy, player PVP duels, even on non-pvp or optional pvp systems.
5. Immunities property supports legal immunity now
6. Player corpses are now saved across reboots (if they haven't decayed)
7. Rhino has been upgraded to 1.7R3
# Build 5.7.5 Release ?/??/2011
1. CoffeeMud now supports html emails, after a fashion
2. New command: DIG, for digging holes and putting stuff in them.  Gem Digging now uses GDIG as its command word.
3. You can now manage MOTD/NEWS using LIST NEWS and CREATE/MODIFY NEWS.  New News is now in journal SYSTEM_NEWS
4. New Abjurer spell: Kinetic Bubble
5. First addition to stock raw resource list in forever (dragonscales, white gold, etc..)
6. GMODIFY can now alter room/locale-type objects as well (global room title changes anyone?)
7. MUDGrinder supports editing/deleting multiple rooms using cntrl-click.
8. New Jester skills: Satire, Quick Change, Center of Attention
9. New Oracle Prayers: Divine Guidance, Prophecy, Seekers Prayer, Soul Peering, Lower Law, Omnipresence, Above the Law