@@ -652,6 +652,13 @@ Example  : cast "divine beauty" dragon\n\r\
 This spell causes the target to become the most perfectly beautiful \
 and confident-seeming incarnation of their present form.
 
+SPELL_DIVINING_EYE=<ABILITY>\
+Usage    : CAST "DIVINING EYE" [DIVINATION SPELL NAME] [SPELL PARAMETERS]\n\r\
+Example  : cast "divining eye" telepathy orc\n\r\
+This spell requires the prior use of the spell "prying eye".  It allows the \
+caster to cast other divination spells through the prying eye, wherever it \
+may presently be.
+
 SPELL_DRAGONFIRE=<ABILITY>\
 Usage    : CAST DRAGONFIRE\n\r\
 Example  : cast dragonfire\n\r\
@@ -1659,6 +1666,15 @@ Usage    : CAST "FORECAST WEATHER"\n\r\
 Example  : cast "forecast weather"\n\r\
 For the duration of the spell, the caster is able to accurately predict the \
 next weather conditions for a given area, so long as the caster is outside.
+
+SPELL_PRYING_EYE=<ABILITY>\
+Usage    : CAST "PRYING EYE" [DIRECTION] ([DIRECTION]...) \n\r\
+Example  : cast "prying eye" north east north up west\n\r\
+This spell causes a small floating eyeball to appear.  It will be weak and \
+vulnerable to attack, but will can move freely through open walkways.  The spell \
+must be invoked with directions for the eye to follow.  The caster will be able to \
+see through the eye as it travels, seeing what it sees. When the eye finishes following \
+its final direction, it will pause and float for a relatively brief time before vanishing.
 
 SPELL_READ_MAGIC=<ABILITY>\
 Usage    : CAST "READ MAGIC" [TARGET NAME] \n\r\
