@@ -2344,3 +2344,5 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 7. MUDGrinder supports editing/deleting multiple rooms using cntrl-click.
 8. New Jester skills: Satire, Quick Change, Center of Attention
 9. New Oracle Prayers: Divine Guidance, Prophecy, Seekers Prayer, Soul Peering, Lower Law, Omnipresence, Above the Law
+10.New Diviner Spells: Solve Maze, Group Status, Detect Weaknesses, Prying Eye, Telepathy, Natural Communion, Arms Length
+   Spying Stone, Hear Thoughts, Know Fate, Divining Eye, Spotters Orders, Find Directions, Death Warning
